@@ -4,7 +4,6 @@ var Mt                      = require("./mt.js");
 var Block                   = require("../../lib/js/block.js");
 var Curry                   = require("../../lib/js/curry.js");
 var Js_exn                  = require("../../lib/js/js_exn.js");
-var Js_exn                  = require("../../lib/js/js_exn.js");
 var Caml_exceptions         = require("../../lib/js/caml_exceptions.js");
 var Caml_builtin_exceptions = require("../../lib/js/caml_builtin_exceptions.js");
 
