@@ -1,7 +1,6 @@
 'use strict';
 
 var Caml_exceptions         = require("../../lib/js/caml_exceptions.js");
-var Caml_exceptions         = require("../../lib/js/caml_exceptions.js");
 var Caml_builtin_exceptions = require("../../lib/js/caml_builtin_exceptions.js");
 
 function f(match) {
