@@ -1,7 +1,6 @@
 'use strict';
 
 var Caml_exceptions = require("./caml_exceptions.js");
-var Caml_exceptions = require("./caml_exceptions.js");
 
 var $$Error = Caml_exceptions.create("Js_exn.Error");
 
